--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
 		"jest:unit":
 			"jest --config=./framework/test/jest/config/unit/jest.config.js",
 		"jest:integration":
-			"jest --config=./framework/test/jest/config/integration/jest.config.js",
+			"jest --config=./framework/test/jest/config/integration/jest.config.js --passWithNoTests",
 		"jest:functional":
-			"jest --config=./framework/test/jest/config/functional/jest.config.js",
+			"jest --config=./framework/test/jest/config/functional/jest.config.js --passWithNoTests",
 		"docs:build": "jsdoc -c docs/conf.json --verbose --pedantic",
 		"docs:serve": "http-server docs/jsdoc/",
 		"check:dependencies": "snyk protect",
